src/test/deca/context/invalid/fields/protected_field_access_outside.deca
// Description :
//    Accès à un champ protected depuis une classe non sous-classe.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
protected int x;
}

class B {
    int f(A a) {
        return a.x;
    }
}

{
}

